--- a/login.html
+++ b/login.html
@@ -1,11 +1,49 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>大事件-登录/注册</title>
-  <link rel="stylesheet" href="/assets/css/login.css">
+    <link rel="stylesheet" href="/assets/lib/layui/css/layui.css" />
+    <link rel="stylesheet" href="/assets/css/login.css" />
 </head>
+
 <body>
+    <div class="layui-main">
+        <img src="/assets/images/logo.png" alt="" />
+    </div>
+    <div class="loginAndRegBox">
+        <div class="title-box"></div>
+        <div class="login-box">
+            <form class="layui-form">
+                <!-- 用户名 -->
+                <div class="layui-form-item">
+                    <i class="layui-icon layui-icon-username"></i> 
+                    <input type="text" name="unname" required lay-verify="required" placeholder="请输入用户名"
+                        autocomplete="off" class="layui-input">
+                </div>
+                <!-- 密码 -->
+                <div class="layui-form-item">
+                    <i class="layui-icon layui-icon-password"></i> 
+                    <input type="text" name="password" refquired lay-verify="required" placeholder="请输入密码"
+                        autocomplete="off" class="layui-input">
+                </div>
+                <!-- 登录按钮 -->
+                <div class="layui-form-item">
+                    <button class="layui-btn layui-btn-fluid layui-btn layui-btn-normal">登录</button>
+                </div>
+                <div class="layui-form-item links">
+                    <a href="javascript:;" id='link-reg'>去注册账号</a>
+                </div>
+            </form>
+        </div>
+        <div class="reg-box">
+            <a href="javascript:;" id='link-login'>去登录</a>
+        </div>
+    </div>
+    <script src="/assets/lib/jquery.js"></script>
+    <script src="/assets/js/login.js"></script>
 </body>
+
 </html>
